# castep_workflow_framework

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.original.md  ARCHITECTURE_STATUS.md  CASTEP_CELL_IO_V0.4_INTEGRATION.md  CLAUDE.md  Cargo.toml  FEATURE_REQUEST_PARAM_MERGE.md  FEEDBACK.md  FINAL_ARCHITECTURE_DESIGN.md  LAYER2_RETHINK.md  PHASE1_IMPLEMENTATION_PLAN.md  PLAN.md  README.md  RUST_API_DESIGN_PLAN.md  UPDATE_SUMMARY.md  answers_to_qwen3-coder.md  answers_to_qwen3.md  devshell.toml  flake.nix
.claude/: settings.json
.claude/hooks/: current_task.json  pare-prefer-mcp.sh
castep_adapter/: Cargo.toml
castep_adapter/src/: lib.rs
castep_auto_hubbard/: auto_hubbard_linux.sh  faux_castep_run.sh  functions_linux.sh  kill_parallel_tasks.sh
docs/: pare-cargo.md
docs/explanations/: workflow_core.md
examples/: simple.toml
examples/hubbard_u_sweep/: Cargo.toml
examples/hubbard_u_sweep/seeds/: ZnO.cell  ZnO.param
examples/hubbard_u_sweep/src/: main.rs
examples/hubbard_u_sweep_slurm/: .validation-complete  Cargo.toml
examples/hubbard_u_sweep_slurm/seeds/: ZnO.cell
examples/hubbard_u_sweep_slurm/src/: config.rs  job_script.rs  main.rs
execution_reports/: .checkpoint_fix-plan-compilable.json  .checkpoint_fix-plan.json  .checkpoint_phase-4.impl.json  .checkpoint_phase4-implementation-plan.json  .checkpoint_phase5a-implementation.json  .checkpoint_phase5b-impl.json  .checkpoint_phase6-implementation.json  .checkpoint_pre-phase4.json  TASK15_execution_2026-04-14T092800.md  TASK19_execution_2026-04-14T093000.md  TASK20_execution_2026-04-14T183500.md  TASK21_execution_2026-04-14T183700.md  execution_fix-plan-compilable_20260423.md  execution_fix-plan_20260420.md  execution_fix-plan_20260421.md  execution_fix-plan_20260422.md  execution_fix-plan_20260423.md  execution_fix-plan_20260424.md  execution_fix-plan_20260426.md  execution_phase-3.1_task17_20260414.md  execution_phase-3_anyhow_migration_20260416.md  execution_phase2.1_20260408_150000.md  execution_phase2.2_2026-04-10T153835.md  execution_phase3_task16_18_2026-04-14.md  execution_phase3_task3_2026-04-12T185501.md  execution_phase3_task7_8_2026-04-12T200300.md  execution_phase3_tasks2_2026-04-12-110500.md  execution_phase4-implementation-plan_20260419.md  execution_phase5a-implementation_20260422.md  execution_phase5b-impl_20260423.md  execution_phase6-implementation_20260425.md  execution_phase6_implementation_20260425.md  execution_pre-phase4_2026-04-17T155730.md  execution_pre-phase4_20260418_020930.md
feedback/: feedback_for_FIX_TASK9+11_TESTS.md
fix_reports/: fix-5_10_2026-04-13.md  fix-8ab-report.md  fix-phase-3-final_2026-04-14.md  fix-phase-3-final_2026-04-15.md  fix-plan-1_2_20260413_232843.md  fix_fix-plan-9_20260414_013522.md  fix_fix-plan_2026-04-19T16:35:39Z.md  fix_fix-plan_2026-04-22T00:00:00Z.md  fix_phase-2.2_fix_plan_20260410_181648.md  fix_phase-2.2_v3_20260410.md  fix_phase-3-v2_2026-04-15.md  fix_phase-3_v5_2026-04-16T02-35.md  fix_phase-5b-v3-2026-04-24.md  fix_phase3_v3_2026-04-15.md
lammps_adapter/: Cargo.toml
lammps_adapter/src/: lib.rs
notes/: qwopus3.5_fix_subtasks.md  task_executor_vs_closure.md
plans/: FIX_TASK9+11_TESTS.md  PHASE1.3_IMPLEMENTATION_PLAN.md  PHASE2.1_IMPLEMENTATION_PLAN_DETAILED.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_PLAN.md  PHASE3_TASK5.md  PHASE3_TASK7_REVISED.md  PHASE3_TASK8_REVISED.md
plans/phase-1/: PHASE1.1_IMPLEMENTATION_PLAN.md  PHASE1.2_BUILDER_PATTERN.md
plans/phase-2/: PHASE2.1_IMPLEMENTATION_PLAN.md  PHASE2.2_IMPLEMENTATION_PLAN.md
plans/phase-3/: PHASE3_ANYHOW_MIGRATION.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_TASK-12.md  PHASE3_TASK-13.md  PHASE3_TASK-14.md  PHASE3_TASK-15.md  PHASE3_TASK-16.md  PHASE3_TASK-17.md  PHASE3_TASK-18.md  PHASE3_TASK-19.md  (+7 more)
workflow-cli/: Cargo.toml
workflow_cli/: Cargo.toml
workflow_cli/src/: main.rs
workflow_core/: Cargo.toml
workflow_core/src/: dag.rs  dag.rs.backup  error.rs  error.rs.backup  executor.rs  lib.rs  monitoring.rs  pipeline.rs  prelude.rs  process.rs  scheduler.rs  schema.rs  state.rs  task.rs  workflow.rs  workflow.rs.backup
workflow_core/src/executors/: local.rs  mod.rs  slurm.rs
workflow_core/tests/: collect_failure_policy.rs  dependencies.rs  hook_recording.rs  hubbard_u_sweep.rs  integration.rs  log_persistence.rs  periodic_hooks.rs  queued_workflow.rs  resume.rs  timeout_integration.rs
workflow_core/tests/common/: mod.rs
workflow_utils/: Cargo.toml
(+175 files in other folders)
