[workspace]
members = [
    "workflow_core",
    "workflow_utils",
    "examples/hubbard_u_sweep",
]
resolver = "2"

[workspace.dependencies]
workflow_core = { path = "workflow_core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
petgraph = "0.8"
tokio-rusqlite = "0.5"
async-trait = "0.1"
tokio-util = { version = "0.7" }
bon = "3.9.1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
