[workspace]
members = [
    "workflow_core",
    "workflow_utils",
    "examples/hubbard_u_sweep",
]
resolver = "2"

[workspace.dependencies]
workflow_core = { path = "workflow_core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
petgraph = "0.8"
bon = "3.9.1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
