[workspace]
members = [
    "workflow_core",
    "workflow_utils",
    "examples/hubbard_u_sweep",
    "examples/hubbard_u_sweep_slurm",
    "workflow-cli",
]
resolver = "2"

[workspace.dependencies]
workflow_core = { path = "workflow_core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
petgraph = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
signal-hook = "0.3"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
