[package]
name = "workflow_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
petgraph = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
signal-hook = { workspace = true }

[features]
default-logging = ["dep:tracing-subscriber"]

[dev-dependencies]
tempfile = "3"
workflow_utils = { path = "../workflow_utils" }
