[package]
name = "hubbard_u_sweep_slurm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hubbard_u_sweep_slurm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
castep-cell-fmt = "0.1.0"
castep-cell-io = "0.4.0"
itertools = { workspace = true }
workflow_core = { path = "../../workflow_core", features = ["default-logging"] }
workflow_utils = { path = "../../workflow_utils" }